--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,11 @@ FetchContent_Declare(SFML
     GIT_TAG 2.6.x)
 FetchContent_MakeAvailable(SFML)
 
-add_executable(CMakeSFMLProject src/main.cpp)
+add_executable(CMakeSFMLProject 
+    src/main.cpp
+    inc/EngineLoop.hpp
+    )
+
 target_link_libraries(CMakeSFMLProject PRIVATE sfml-graphics)
 target_compile_features(CMakeSFMLProject PRIVATE cxx_std_17)
 if (WIN32 AND BUILD_SHARED_LIBS)
@@ -16,3 +20,5 @@ if (WIN32 AND BUILD_SHARED_LIBS)
 endif()
 
 install(TARGETS CMakeSFMLProject)
+
+
